--- a/src/gui/views/ViewAgenda.fxml
+++ b/src/gui/views/ViewAgenda.fxml
@@ -1,47 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXCheckBox?>
+<?import com.jfoenix.controls.JFXSpinner?>
+<?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ProgressIndicator?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="346.0" prefWidth="345.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.ViewAgendaController">
+<AnchorPane fx:id="apCentral" prefHeight="371.0" prefWidth="577.0" stylesheets="@css/styleViewAgenda.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.ViewAgendaController">
    <children>
       <Label layoutX="221.0" layoutY="114.0" text="Horários">
          <font>
             <Font name="System Bold" size="20.0" />
          </font>
       </Label>
-      <Line endX="-181.0" endY="-47.5" layoutX="183.0" layoutY="161.0" startX="336.0" startY="-47.5" stroke="#827f7f" />
-      <Line endX="-181.0" endY="-47.5" layoutX="183.0" layoutY="349.0" startX="336.5" startY="-47.5" stroke="#827f7f" />
-      <GridPane layoutX="131.0" layoutY="14.0" prefHeight="90.0" prefWidth="277.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="133.0" minWidth="10.0" prefWidth="88.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="203.0" minWidth="10.0" prefWidth="189.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="20.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="50.0" minHeight="10.0" prefHeight="42.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="42.0" minHeight="10.0" prefHeight="28.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <TextField fx:id="txtFuncionario" prefHeight="25.0" prefWidth="174.0" GridPane.columnIndex="1" />
-            <Label text="Funcionário:" />
-            <Label text="Cliente:" GridPane.rowIndex="1" />
-            <TextField fx:id="txtCliente" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <DatePicker fx:id="dpData" disable="true" prefHeight="45.0" prefWidth="149.0" style="-fx-opacity: 1;" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <Label text="Data:" GridPane.rowIndex="2" />
-         </children>
-      </GridPane>
-      <GridPane layoutX="19.0" layoutY="143.0">
+      <Pane fx:id="paneCentral" layoutX="24.0" layoutY="177.0" opacity="0.87" prefHeight="180.0" prefWidth="538.0" />
+      <GridPane layoutX="43.0" layoutY="192.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -57,42 +39,153 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <CheckBox fx:id="cb8" mnemonicParsing="false" text="8:00" />
-            <CheckBox fx:id="cb8_3" mnemonicParsing="false" text="8:30" GridPane.rowIndex="1" />
-            <CheckBox fx:id="cb9" mnemonicParsing="false" text="9:00" GridPane.rowIndex="2" />
-            <CheckBox fx:id="cb9_3" mnemonicParsing="false" text="9:30" GridPane.rowIndex="3" />
-            <CheckBox fx:id="cb10" mnemonicParsing="false" text="10:00" GridPane.rowIndex="4" />
-            <CheckBox fx:id="cb10_3" mnemonicParsing="false" text="10:30" GridPane.columnIndex="1" />
-            <CheckBox fx:id="cb11" mnemonicParsing="false" text="11:00" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <CheckBox fx:id="cb11_3" mnemonicParsing="false" text="11:30" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <CheckBox fx:id="cb12" mnemonicParsing="false" text="12:00" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <CheckBox fx:id="cb12_3" mnemonicParsing="false" text="12:30" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-            <CheckBox fx:id="cb13" mnemonicParsing="false" text="13:00" GridPane.columnIndex="2" />
-            <CheckBox fx:id="cb13_3" mnemonicParsing="false" text="13:30" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-            <CheckBox fx:id="cb14" mnemonicParsing="false" text="14:00" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-            <CheckBox fx:id="cb14_3" mnemonicParsing="false" text="14:30" GridPane.columnIndex="2" GridPane.rowIndex="3" />
-            <CheckBox fx:id="cb15" mnemonicParsing="false" text="15:00" GridPane.columnIndex="2" GridPane.rowIndex="4" />
-            <CheckBox fx:id="cb15_3" mnemonicParsing="false" text="15:30" GridPane.columnIndex="3" />
-            <CheckBox fx:id="cb16" mnemonicParsing="false" text="16:00" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-            <CheckBox fx:id="cb16_3" mnemonicParsing="false" text="16:30" GridPane.columnIndex="3" GridPane.rowIndex="2" />
-            <CheckBox fx:id="cb17" mnemonicParsing="false" text="17:00" GridPane.columnIndex="3" GridPane.rowIndex="3" />
-            <CheckBox fx:id="cb17_3" mnemonicParsing="false" text="17:30" GridPane.columnIndex="3" GridPane.rowIndex="4" />
-            <CheckBox fx:id="cb18" mnemonicParsing="false" text="18:00" GridPane.columnIndex="4" />
-            <Button fx:id="btAgendar" mnemonicParsing="false" onAction="#onBtAgendarAction" prefHeight="26.0" prefWidth="91.0" text="Agendar" GridPane.columnIndex="4" GridPane.rowIndex="4" />
+            <JFXCheckBox fx:id="cb8" checkedColor="#ff4747" text="8:00" textFill="WHITE" unCheckedColor="WHITE">
+               <font>
+                  <Font name="System Bold" size="16.0" />
+               </font>
+            </JFXCheckBox>
+            <JFXCheckBox fx:id="cb8_3" checkedColor="#ff4747" text="8:30" textFill="WHITE" unCheckedColor="WHITE" GridPane.rowIndex="1">
+               <font>
+                  <Font name="System Bold" size="16.0" />
+               </font>
+            </JFXCheckBox>
+            <JFXCheckBox fx:id="cb9" checkedColor="#ff4747" text="9:00" textFill="WHITE" unCheckedColor="WHITE" GridPane.rowIndex="2">
+               <font>
+                  <Font name="System Bold" size="16.0" />
+               </font>
+            </JFXCheckBox>
+            <JFXCheckBox fx:id="cb9_3" checkedColor="#ff4747" text="9:30" textFill="WHITE" unCheckedColor="WHITE" GridPane.rowIndex="3">
+               <font>
+                  <Font name="System Bold" size="16.0" />
+               </font>
+            </JFXCheckBox>
+            <JFXCheckBox fx:id="cb10" checkedColor="#ff4747" text="10:00" textFill="WHITE" unCheckedColor="WHITE" GridPane.rowIndex="4">
+               <font>
+                  <Font name="System Bold" size="16.0" />
+               </font>
+            </JFXCheckBox>
+            <JFXCheckBox fx:id="cb10_3" checkedColor="#ff4747" text="10:30" textFill="WHITE" unCheckedColor="WHITE" GridPane.columnIndex="1">
+               <font>
+                  <Font name="System Bold" size="16.0" />
+               </font>
+            </JFXCheckBox>
+            <JFXCheckBox fx:id="cb11" checkedColor="#ff4747" text="11:00" textFill="WHITE" unCheckedColor="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <font>
+                  <Font name="System Bold" size="16.0" />
+               </font>
+            </JFXCheckBox>
+            <JFXCheckBox fx:id="cb11_3" checkedColor="#ff4747" text="11:30" textFill="WHITE" unCheckedColor="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <font>
+                  <Font name="System Bold" size="16.0" />
+               </font>
+            </JFXCheckBox>
+            <JFXCheckBox fx:id="cb12" checkedColor="#ff4747" text="12:00" textFill="WHITE" unCheckedColor="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="3">
+               <font>
+                  <Font name="System Bold" size="16.0" />
+               </font>
+            </JFXCheckBox>
+            <JFXCheckBox fx:id="cb12_3" checkedColor="#ff4747" text="12:30" textFill="WHITE" unCheckedColor="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="4">
+               <font>
+                  <Font name="System Bold" size="16.0" />
+               </font>
+            </JFXCheckBox>
+            <JFXCheckBox fx:id="cb13" checkedColor="#ff4747" text="13:00" textFill="WHITE" unCheckedColor="WHITE" GridPane.columnIndex="2">
+               <font>
+                  <Font name="System Bold" size="16.0" />
+               </font>
+            </JFXCheckBox>
+            <JFXCheckBox fx:id="cb13_3" checkedColor="#ff4747" text="13:30" textFill="WHITE" unCheckedColor="WHITE" GridPane.columnIndex="2" GridPane.rowIndex="1">
+               <font>
+                  <Font name="System Bold" size="16.0" />
+               </font>
+            </JFXCheckBox>
+            <JFXCheckBox fx:id="cb14" checkedColor="#ff4747" text="14:00" textFill="WHITE" unCheckedColor="WHITE" GridPane.columnIndex="2" GridPane.rowIndex="2">
+               <font>
+                  <Font name="System Bold" size="16.0" />
+               </font>
+            </JFXCheckBox>
+            <JFXCheckBox fx:id="cb14_3" checkedColor="#ff4747" text="14:30" textFill="WHITE" unCheckedColor="WHITE" GridPane.columnIndex="2" GridPane.rowIndex="3">
+               <font>
+                  <Font name="System Bold" size="16.0" />
+               </font>
+            </JFXCheckBox>
+            <JFXCheckBox fx:id="cb15" checkedColor="#ff4747" text="15:00" textFill="WHITE" unCheckedColor="WHITE" GridPane.columnIndex="2" GridPane.rowIndex="4">
+               <font>
+                  <Font name="System Bold" size="16.0" />
+               </font>
+            </JFXCheckBox>
+            <JFXCheckBox fx:id="cb15_3" checkedColor="#ff4747" text="15:30" textFill="WHITE" unCheckedColor="WHITE" GridPane.columnIndex="3">
+               <font>
+                  <Font name="System Bold" size="16.0" />
+               </font>
+            </JFXCheckBox>
+            <JFXCheckBox fx:id="cb16" checkedColor="#ff4747" text="16:00" textFill="WHITE" unCheckedColor="WHITE" GridPane.columnIndex="3" GridPane.rowIndex="1">
+               <font>
+                  <Font name="System Bold" size="16.0" />
+               </font>
+            </JFXCheckBox>
+            <JFXCheckBox fx:id="cb16_3" checkedColor="#ff4747" text="16:30" textFill="WHITE" unCheckedColor="WHITE" GridPane.columnIndex="3" GridPane.rowIndex="2">
+               <font>
+                  <Font name="System Bold" size="16.0" />
+               </font>
+            </JFXCheckBox>
+            <JFXCheckBox fx:id="cb17" checkedColor="#ff4747" text="17:00" textFill="WHITE" unCheckedColor="WHITE" GridPane.columnIndex="3" GridPane.rowIndex="3">
+               <font>
+                  <Font name="System Bold" size="16.0" />
+               </font>
+            </JFXCheckBox>
+            <JFXCheckBox fx:id="cb17_3" checkedColor="#ff4747" text="17:30" textFill="WHITE" unCheckedColor="WHITE" GridPane.columnIndex="3" GridPane.rowIndex="4">
+               <font>
+                  <Font name="System Bold" size="16.0" />
+               </font>
+            </JFXCheckBox>
+            <JFXCheckBox fx:id="cb18" checkedColor="#ff4747" text="18:00" textFill="WHITE" unCheckedColor="WHITE" GridPane.columnIndex="4">
+               <font>
+                  <Font name="System Bold" size="16.0" />
+               </font>
+            </JFXCheckBox>
          </children>
       </GridPane>
-      <GridPane layoutX="360.0" layoutY="309.0" prefHeight="30.0" prefWidth="149.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="123.0" minWidth="10.0" prefWidth="101.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="77.0" minWidth="10.0" prefWidth="48.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
+      <Pane fx:id="paneCentral" layoutX="30.0" layoutY="54.0" opacity="0.87" prefHeight="110.0" prefWidth="526.0" />
+      <DatePicker fx:id="dpData" disable="true" layoutX="232.0" layoutY="116.0" prefHeight="39.0" prefWidth="162.0" style="-fx-opacity: 1;" />
+      <JFXTextField fx:id="txtCliente" focusColor="WHITE" layoutX="80.0" layoutY="61.0" promptText="Nome do Cliente" />
+      <JFXTextField fx:id="txtFuncionario" focusColor="WHITE" layoutX="343.0" layoutY="62.0" promptText="Nome do Funcionário" />
+      <ImageView fitHeight="39.0" fitWidth="44.0" layoutX="38.0" layoutY="60.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../model/images/icons8_businesswoman_60px.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="39.0" fitWidth="44.0" layoutX="299.0" layoutY="61.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../model/images/icons8_female_worker_60px_1.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="39.0" fitWidth="44.0" layoutX="189.0" layoutY="117.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../model/images/icons8_calendar_1_60px_1.png" />
+         </image>
+      </ImageView>
+      <Pane layoutX="-1.0" prefHeight="39.0" prefWidth="577.0" style="-fx-background-color: #00ff94;">
          <children>
-            <ProgressIndicator fx:id="piCarregando" prefHeight="26.0" prefWidth="86.0" visible="false" GridPane.columnIndex="1" />
-            <Label fx:id="labelStatus" alignment="BASELINE_RIGHT" prefHeight="17.0" prefWidth="69.0" text="Agendando!" visible="false" />
+            <Label layoutX="238.0" layoutY="-2.0" text="Agenda" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="28.0" />
+               </font>
+            </Label>
+            <JFXSpinner fx:id="piCarregando" layoutX="542.0" layoutY="4.0" prefHeight="30.0" prefWidth="31.0" visible="false" />
          </children>
-      </GridPane>
+      </Pane>
+      <JFXButton fx:id="btAgendar" layoutX="437.0" layoutY="303.0" onAction="#onBtAgendarAction" text="Agendar" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="16.0" />
+         </font>
+         <graphic>
+            <ImageView fitHeight="21.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../model/images/icons8_calendar_1_60px_1.png" />
+               </image>
+            </ImageView>
+         </graphic>
+      </JFXButton>
    </children>
 </AnchorPane>
