--- a/src/gui/views/ViewFuncionario.fxml
+++ b/src/gui/views/ViewFuncionario.fxml
@@ -11,17 +11,20 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="600.0" maxWidth="924.0" minHeight="0.0" minWidth="0.0" prefHeight="600.0" prefWidth="659.0" stylesheets="@css/styleTabFuncionario.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.ViewFuncionarioController">
    <children>
-      <TabPane layoutX="-5.0" layoutY="-5.0" prefHeight="607.0" prefWidth="666.0" side="LEFT" tabClosingPolicy="UNAVAILABLE">
+      <TabPane layoutX="-5.0" prefHeight="607.0" prefWidth="666.0" side="LEFT" tabClosingPolicy="UNAVAILABLE">
         <tabs>
           <Tab>
             <content>
               <AnchorPane fx:id="tabReplaceAp" minHeight="0.0" minWidth="0.0" prefHeight="607.0" prefWidth="607.0">
                      <children>
-                        <TableView fx:id="tvFuncionario" layoutX="18.0" layoutY="209.0" prefHeight="378.0" prefWidth="557.0" style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);">
+                        <Pane fx:id="paneCentral" layoutX="-32.0" layoutY="4.0" opacity="0.83" prefHeight="159.0" prefWidth="598.0" style="-fx-border-color: #cccccc;" />
+                        <Pane fx:id="paneCentral" layoutX="-13.0" layoutY="183.0" opacity="0.83" prefHeight="408.0" prefWidth="596.0" style="-fx-border-color: #cccccc;" />
+                        <TableView fx:id="tvFuncionario" layoutX="14.0" layoutY="199.0" prefHeight="378.0" prefWidth="557.0" style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);">
                           <columns>
                             <TableColumn fx:id="colunaCpf" minWidth="0.0" prefWidth="127.0" text="CPF">
                                  <graphic>
@@ -57,20 +60,20 @@
                                  </graphic></TableColumn>
                           </columns>
                         </TableView>
-                        <JFXTextField fx:id="txtNomeFuncionario" focusColor="WHITE" layoutX="80.0" layoutY="51.0" promptText="Nome do Funcionário">
+                        <JFXTextField fx:id="txtNomeFuncionario" focusColor="WHITE" layoutX="69.0" layoutY="33.0" promptText="Nome do Funcionário">
                            <font>
                               <Font name="System Bold" size="16.0" />
                            </font></JFXTextField>
-                        <JFXTextField fx:id="txtCpfFuncionario" focusColor="WHITE" layoutX="329.0" layoutY="51.0" promptText="CPF funcionário">
+                        <JFXTextField fx:id="txtCpfFuncionario" focusColor="WHITE" layoutX="318.0" layoutY="33.0" promptText="CPF funcionário">
                            <font>
                               <Font name="System Bold" size="16.0" />
                            </font>
                         </JFXTextField>
-                        <JFXTextField fx:id="txtTelefoneFuncionario" focusColor="WHITE" layoutX="81.0" layoutY="111.0" promptText="Telefone do Funcionário">
+                        <JFXTextField fx:id="txtTelefoneFuncionario" focusColor="WHITE" layoutX="70.0" layoutY="93.0" promptText="Telefone do Funcionário">
                            <font>
                               <Font name="System Bold" size="16.0" />
                            </font></JFXTextField>
-                        <JFXButton fx:id="btExcluiFuncionario" layoutX="401.0" layoutY="111.0" onAction="#excluirFuncionario" prefHeight="39.0" prefWidth="153.0" text="Excluir" textFill="WHITE">
+                        <JFXButton fx:id="btExcluiFuncionario" layoutX="390.0" layoutY="93.0" onAction="#excluirFuncionario" prefHeight="39.0" prefWidth="153.0" text="Excluir" textFill="WHITE">
                            <font>
                               <Font name="System Bold" size="16.0" />
                            </font>
@@ -82,7 +85,7 @@
                               </ImageView>
                            </graphic>
                         </JFXButton>
-                        <JFXButton fx:id="btCriaFuncionario" layoutX="299.0" layoutY="111.0" onAction="#onBtCriaFuncionarioAction" prefHeight="39.0" prefWidth="137.0" text="Criar" textFill="WHITE">
+                        <JFXButton fx:id="btCriaFuncionario" layoutX="288.0" layoutY="93.0" onAction="#onBtCriaFuncionarioAction" prefHeight="39.0" prefWidth="137.0" text="Criar" textFill="WHITE">
                            <font>
                               <Font name="System Bold" size="16.0" />
                            </font>
@@ -94,17 +97,17 @@
                               </ImageView>
                            </graphic>
                         </JFXButton>
-                        <ImageView fitHeight="37.0" fitWidth="38.0" layoutX="40.0" layoutY="112.0" pickOnBounds="true" preserveRatio="true" style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);">
+                        <ImageView fitHeight="37.0" fitWidth="38.0" layoutX="30.0" layoutY="94.0" pickOnBounds="true" preserveRatio="true" style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);">
                            <image>
                               <Image url="@../../model/images/icons8_phone_64px.png" />
                            </image>
                         </ImageView>
-                        <ImageView fitHeight="37.0" fitWidth="38.0" layoutX="289.0" layoutY="52.0" pickOnBounds="true" preserveRatio="true" style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);">
+                        <ImageView fitHeight="37.0" fitWidth="38.0" layoutX="278.0" layoutY="34.0" pickOnBounds="true" preserveRatio="true" style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);">
                            <image>
                               <Image url="@../../model/images/icons8_identification_documents_60px.png" />
                            </image>
                         </ImageView>
-                        <ImageView fitHeight="37.0" fitWidth="38.0" layoutX="40.0" layoutY="52.0" pickOnBounds="true" preserveRatio="true" style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);">
+                        <ImageView fitHeight="37.0" fitWidth="38.0" layoutX="30.0" layoutY="34.0" pickOnBounds="true" preserveRatio="true" style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);">
                            <image>
                               <Image url="@../../model/images/icons8_businesswoman_60px.png" />
                            </image>
@@ -123,7 +126,8 @@
             <content>
               <AnchorPane fx:id="tabFuncionarioAp" minHeight="0.0" minWidth="0.0" prefHeight="650.0" prefWidth="669.0">
                      <children>
-                        <TableView fx:id="tvFuncionarioAtualizado" layoutX="18.0" layoutY="209.0" onMouseClicked="#selecionaFuncionario" prefHeight="378.0" prefWidth="557.0" style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);">
+                        <Pane fx:id="paneCentral" layoutX="-15.0" layoutY="183.0" opacity="0.83" prefHeight="408.0" prefWidth="598.0" style="-fx-border-color: #cccccc;" />
+                        <TableView fx:id="tvFuncionarioAtualizado" layoutX="14.0" layoutY="199.0" onMouseClicked="#selecionaFuncionario" prefHeight="378.0" prefWidth="557.0" style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);">
                            <columns>
                               <TableColumn fx:id="colunaCpfAtualizado" minWidth="0.0" prefWidth="127.0" text="CPF">
                                  <graphic>
@@ -154,22 +158,23 @@
                               </TableColumn>
                            </columns>
                         </TableView>
-                        <JFXTextField fx:id="txtTelefoneFuncionarioAtualizado" focusColor="WHITE" layoutX="81.0" layoutY="111.0" promptText="Telefone do Funcionário">
+                        <Pane fx:id="paneCentral" layoutX="-36.0" layoutY="4.0" opacity="0.83" prefHeight="159.0" prefWidth="577.0" style="-fx-border-color: #cccccc;" />
+                        <JFXTextField fx:id="txtTelefoneFuncionarioAtualizado" focusColor="WHITE" layoutX="81.0" layoutY="92.0" promptText="Telefone do Funcionário">
                            <font>
                               <Font name="System Bold" size="16.0" />
                            </font>
                         </JFXTextField>
-                        <JFXTextField fx:id="txtCpfFuncionarioAtualizado" focusColor="WHITE" layoutX="329.0" layoutY="51.0" promptText="CPF funcionário">
+                        <JFXTextField fx:id="txtCpfFuncionarioAtualizado" focusColor="WHITE" layoutX="329.0" layoutY="32.0" promptText="CPF funcionário">
                            <font>
                               <Font name="System Bold" size="16.0" />
                            </font>
                         </JFXTextField>
-                        <JFXTextField fx:id="txtNomeFuncionarioAtualizado" focusColor="WHITE" layoutX="80.0" layoutY="51.0" promptText="Nome do Funcionário">
+                        <JFXTextField fx:id="txtNomeFuncionarioAtualizado" focusColor="WHITE" layoutX="80.0" layoutY="32.0" promptText="Nome do Funcionário">
                            <font>
                               <Font name="System Bold" size="16.0" />
                            </font>
                         </JFXTextField>
-                        <JFXButton fx:id="btAtualizaFuncionario" layoutX="348.0" layoutY="111.0" onAction="#onAtualizaFuncionarioAction" prefHeight="39.0" prefWidth="176.0" text="Atualizar" textFill="WHITE">
+                        <JFXButton fx:id="btAtualizaFuncionario" layoutX="348.0" layoutY="92.0" onAction="#onAtualizaFuncionarioAction" prefHeight="39.0" prefWidth="176.0" text="Atualizar" textFill="WHITE">
                            <font>
                               <Font name="System Bold" size="16.0" />
                            </font>
@@ -181,17 +186,17 @@
                               </ImageView>
                            </graphic>
                         </JFXButton>
-                        <ImageView fitHeight="37.0" fitWidth="38.0" layoutX="40.0" layoutY="112.0" pickOnBounds="true" preserveRatio="true" style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);">
+                        <ImageView fitHeight="37.0" fitWidth="38.0" layoutX="40.0" layoutY="93.0" pickOnBounds="true" preserveRatio="true" style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);">
                            <image>
                               <Image url="@../../model/images/icons8_phone_64px.png" />
                            </image>
                         </ImageView>
-                        <ImageView fitHeight="37.0" fitWidth="38.0" layoutX="289.0" layoutY="52.0" pickOnBounds="true" preserveRatio="true" style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);">
+                        <ImageView fitHeight="37.0" fitWidth="38.0" layoutX="289.0" layoutY="33.0" pickOnBounds="true" preserveRatio="true" style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);">
                            <image>
                               <Image url="@../../model/images/icons8_identification_documents_60px.png" />
                            </image>
                         </ImageView>
-                        <ImageView fitHeight="37.0" fitWidth="38.0" layoutX="40.0" layoutY="52.0" pickOnBounds="true" preserveRatio="true" style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);">
+                        <ImageView fitHeight="37.0" fitWidth="38.0" layoutX="40.0" layoutY="33.0" pickOnBounds="true" preserveRatio="true" style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);">
                            <image>
                               <Image url="@../../model/images/icons8_businesswoman_60px.png" />
                            </image>
@@ -213,5 +218,7 @@
          </opaqueInsets>
       </TabPane>
       <JFXSpinner fx:id="piStatus" layoutX="8.0" layoutY="542.0" visible="false" />
+      <Pane layoutX="-9.0" layoutY="127.0" prefHeight="481.0" prefWidth="77.0" style="-fx-background-color: #2c2e33; -fx-border-color: #cccccc;" />
+      <Pane layoutY="-2.0" prefHeight="6.0" prefWidth="69.0" style="-fx-background-color: #2c2e33;" />
    </children>
 </AnchorPane>
