--- a/src/gui/views/css/styleTabFuncionario.css
+++ b/src/gui/views/css/styleTabFuncionario.css
@@ -1,3 +1,10 @@
+#paneCentral{
+	-fx-background-color: #545E6A;
+	-fx-background-radius: 1em;
+	-fx-border-radius: 1em;
+	-fx-effect:  dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);
+}
+
 #tabFuncionarioAp, #tabReplaceAp{
 	-fx-background-color: #2c2e33;
 	-fx-border-width: 8;
