--- a/src/gui/views/ViewOperacoes.fxml
+++ b/src/gui/views/ViewOperacoes.fxml
@@ -3,11 +3,11 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXCheckBox?>
 <?import com.jfoenix.controls.JFXRadioButton?>
+<?import com.jfoenix.controls.JFXSpinner?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -340,7 +340,7 @@
                   <Font name="System Bold" size="12.0" />
                </font>
             </Button>
-            <Button fx:id="btAnual" layoutX="971.0" layoutY="3.0" mnemonicParsing="false" onAction="#selecionaMes" style="-fx-background-radius: 0em; -fx-background-color: #a6fca6;" text="Anual" textFill="#243a51">
+            <Button fx:id="btAnual" layoutX="971.0" layoutY="3.0" mnemonicParsing="false" onAction="#selecionaMes" style="-fx-background-radius: 0.3em; -fx-background-color: #a6fca6;" text="Anual" textFill="#243a51">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
@@ -348,36 +348,7 @@
          </children>
       </Pane>
       <DatePicker fx:id="dpData" layoutX="803.0" layoutY="102.0" prefHeight="39.0" prefWidth="186.0" promptText="Data" />
-      <Pane fx:id="paneCentral" layoutX="271.0" layoutY="197.0" opacity="0.57" prefHeight="95.0" prefWidth="461.0" style="-fx-border-color: white;">
-         <children>
-            <GridPane layoutX="539.0" layoutY="57.0" prefHeight="30.0" prefWidth="149.0">
-               <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="113.0" minWidth="10.0" prefWidth="113.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="70.0" minWidth="10.0" prefWidth="36.0" />
-               </columnConstraints>
-               <rowConstraints>
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-               </rowConstraints>
-               <children>
-                  <Label fx:id="lbStatus1" alignment="CENTER_RIGHT" contentDisplay="RIGHT" prefHeight="17.0" prefWidth="108.0" text="Carregando" visible="false" />
-                  <ProgressIndicator fx:id="piStatus1" prefHeight="30.0" prefWidth="84.0" visible="false" GridPane.columnIndex="1" />
-               </children>
-            </GridPane>
-            <GridPane layoutX="278.0" layoutY="57.0" prefHeight="30.0" prefWidth="149.0">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="113.0" minWidth="10.0" prefWidth="113.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="70.0" minWidth="10.0" prefWidth="36.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
-               <children>
-                  <Label fx:id="lbStatus" alignment="CENTER_RIGHT" contentDisplay="RIGHT" prefHeight="17.0" prefWidth="108.0" text="Carregando" visible="false" />
-                  <ProgressIndicator fx:id="piStatus" prefHeight="30.0" prefWidth="84.0" visible="false" GridPane.columnIndex="1" />
-               </children>
-            </GridPane>
-         </children>
-      </Pane>
+      <Pane fx:id="paneCentral" layoutX="271.0" layoutY="197.0" opacity="0.57" prefHeight="95.0" prefWidth="461.0" style="-fx-border-color: white;" />
       <GridPane layoutX="283.0" layoutY="213.0" prefHeight="32.0" prefWidth="411.0">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="156.0" minWidth="10.0" prefWidth="107.0" />
@@ -502,5 +473,6 @@
             </ImageView>
          </graphic>
       </JFXButton>
+      <JFXSpinner fx:id="piStatus" layoutX="677.0" layoutY="250.0" prefHeight="32.0" prefWidth="43.0" visible="false" />
    </children>
 </AnchorPane>
