--- a/src/gui/views/ViewCaixa.fxml
+++ b/src/gui/views/ViewCaixa.fxml
@@ -2,13 +2,13 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXComboBox?>
+<?import com.jfoenix.controls.JFXSpinner?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import com.jfoenix.controls.JFXTreeView?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
@@ -25,18 +25,9 @@
 
 <AnchorPane fx:id="apCentral" minHeight="-Infinity" minWidth="-Infinity" prefHeight="695.0" prefWidth="1366.0" stylesheets="@css/styleViewCaixa.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.ViewCaixaController">
    <children>
-      <Button fx:id="btAbrirFecharCaixa" layoutX="10.0" layoutY="11.0" mnemonicParsing="false" onAction="#onBtAbrirFecharCaixaAction" prefHeight="47.0" prefWidth="169.0">
-         <font>
-            <Font name="System Bold" size="15.0" />
-         </font>
-         <graphic>
-            <ImageView fx:id="ivCaixa" fitHeight="61.0" fitWidth="69.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../model/images/icons8_open_sign_96px.png" />
-               </image>
-            </ImageView>
-         </graphic></Button>
-      <DatePicker fx:id="dpData" disable="true" layoutX="48.0" layoutY="266.0" prefHeight="27.0" prefWidth="185.0" />
+      <Pane fx:id="paneCentral" layoutX="1023.0" layoutY="10.0" opacity="0.53" prefHeight="106.0" prefWidth="336.0" />
+      <Pane fx:id="paneCentral" layoutX="1023.0" layoutY="10.0" opacity="0.53" prefHeight="34.0" prefWidth="336.0" />
+      <Pane fx:id="paneCentral" layoutX="261.0" layoutY="13.0" opacity="0.53" prefHeight="106.0" prefWidth="390.0" />
       <Pane fx:id="paneCentral" layoutX="262.0" layoutY="129.0" opacity="0.53" prefHeight="524.0" prefWidth="1097.0" />
       <TableView fx:id="tvTransacao" layoutX="274.0" layoutY="139.0" prefHeight="502.0" prefWidth="1075.0">
         <columns>
@@ -118,7 +109,7 @@
         </columns>
       </TableView>
       <Label layoutX="43.0" layoutY="371.0" text="Forma de pagamento:" />
-      <GridPane layoutX="266.0" layoutY="51.0" prefHeight="63.0" prefWidth="438.0" vgap="10.0">
+      <GridPane layoutX="272.0" layoutY="30.0" prefHeight="63.0" prefWidth="438.0" vgap="10.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="241.0" minWidth="10.0" prefWidth="202.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="152.0" minWidth="0.0" prefWidth="34.0" />
@@ -131,19 +122,19 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label prefHeight="29.0" prefWidth="192.0" text="Faturado no dia:" GridPane.rowIndex="1">
+            <Label prefHeight="29.0" prefWidth="192.0" text="Faturado no dia:" textFill="WHITE" GridPane.rowIndex="1">
                <font>
-                  <Font size="18.0" />
+                  <Font name="System Bold" size="18.0" />
                </font>
             </Label>
-            <Label text="Transação em dinheiro:" GridPane.rowIndex="2">
+            <Label text="Transação em dinheiro:" textFill="WHITE" GridPane.rowIndex="2">
                <font>
-                  <Font size="18.0" />
+                  <Font name="System Bold" size="18.0" />
                </font>
             </Label>
-            <Label text="Transação em cartão:" GridPane.halignment="LEFT" GridPane.rowIndex="3">
+            <Label text="Transação em cartão:" textFill="WHITE" GridPane.halignment="LEFT" GridPane.rowIndex="3">
                <font>
-                  <Font size="18.0" />
+                  <Font name="System Bold" size="18.0" />
                </font>
             </Label>
             <Label fx:id="lbValorTotal1" text="R$" textFill="#10bf24" GridPane.columnIndex="1" GridPane.rowIndex="1">
@@ -176,9 +167,9 @@
                   <Font name="System Bold" size="18.0" />
                </font>
             </Label>
-            <Label text="Valor em caixa:">
+            <Label text="Valor em caixa:" textFill="WHITE">
                <font>
-                  <Font size="18.0" />
+                  <Font name="System Bold" size="18.0" />
                </font>
             </Label>
             <Label fx:id="lbTotalEmCaixa" prefHeight="27.0" prefWidth="70.0" text="00.00" textFill="#10bf24" GridPane.columnIndex="2">
@@ -193,7 +184,7 @@
             </Label>
          </children>
       </GridPane>
-      <GridPane layoutX="1159.0" layoutY="655.0" prefHeight="30.0" prefWidth="197.0">
+      <GridPane layoutX="1159.0" layoutY="660.0" prefHeight="30.0" prefWidth="197.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="178.0" minWidth="10.0" prefWidth="114.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="114.0" minWidth="10.0" prefWidth="50.0" />
@@ -202,20 +193,14 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label fx:id="labelStatus" alignment="CENTER" contentDisplay="CENTER" text="Carregando Tabela!" visible="false" />
-            <ProgressIndicator fx:id="piStatus" visible="false" GridPane.columnIndex="1" />
+            <Label fx:id="labelStatus" alignment="CENTER" contentDisplay="CENTER" text="Carregando Tabela!" textFill="WHITE" visible="false">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Label>
+            <JFXSpinner fx:id="piStatus" GridPane.columnIndex="1" />
          </children>
       </GridPane>
-      <Pane fx:id="paneCentral" layoutX="4.0" layoutY="164.0" opacity="0.53" prefHeight="524.0" prefWidth="248.0" />
-      <Button fx:id="btEnviarTransacao" layoutX="23.0" layoutY="647.0" mnemonicParsing="false" onAction="#onBtEnviarTransacaoAction" text="Adicionar">
-         <graphic>
-            <ImageView fitHeight="24.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../model/images/icons8_add_96px_1.png" />
-               </image>
-            </ImageView>
-         </graphic>
-      </Button>
+      <Pane fx:id="paneCentral" layoutX="3.0" layoutY="164.0" opacity="0.53" prefHeight="524.0" prefWidth="249.0" />
       <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="13.0" layoutY="268.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../model/images/icons8_calendar_1_60px_1.png" />
@@ -231,7 +216,7 @@
             <Image url="@../../model/images/icons8_card_payment_60px_1.png" />
          </image>
       </ImageView>
-      <GridPane layoutX="368.0" layoutY="9.0" prefHeight="30.0" prefWidth="336.0">
+      <GridPane layoutX="1036.0" layoutY="11.0" prefHeight="30.0" prefWidth="336.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="194.0" minWidth="10.0" prefWidth="166.0" />
           <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="176.0" minWidth="10.0" prefWidth="176.0" />
@@ -245,9 +230,9 @@
                   <Font name="System Bold" size="20.0" />
                </font>
             </Label>
-            <Label prefHeight="30.0" prefWidth="166.0" text="Status do caixa:">
+            <Label prefHeight="30.0" prefWidth="166.0" text="Status do caixa:" textFill="WHITE">
                <font>
-                  <Font size="20.0" />
+                  <Font name="System Bold" size="20.0" />
                </font>
             </Label>
          </children>
@@ -257,24 +242,16 @@
             <Image url="@../../model/images/icons8_voice_recognition_60px_1.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="11.0" layoutY="418.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="11.0" layoutY="421.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../model/images/icons8_address_book_30px_1.png" />
          </image>
       </ImageView>
-      <CheckBox fx:id="cbBloqueiaPreco" layoutX="164.0" layoutY="313.0" mnemonicParsing="false" onAction="#bloqDesbloqValor" selected="true" text="Liberar/Bloq" textFill="WHITE" wrapText="true">
+      <CheckBox fx:id="cbBloqueiaPreco" layoutX="175.0" layoutY="313.0" mnemonicParsing="false" onAction="#bloqDesbloqValor" selected="true" text="Liberar/Bloq" textFill="WHITE" wrapText="true">
          <font>
             <Font name="System Bold" size="9.0" />
          </font></CheckBox>
-      <DatePicker fx:id="dpSelecao" editable="false" layoutX="1108.0" layoutY="72.0" onAction="#carregaTransacao" prefHeight="26.0" prefWidth="140.0" />
-      <Button fx:id="btExcluir" layoutX="128.0" layoutY="647.0" mnemonicParsing="false" onAction="#excluirTransacao" prefHeight="34.0" prefWidth="96.0" text="Excluir">
-         <graphic>
-            <ImageView fitHeight="24.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../model/images/icons8_trash_48px.png" />
-               </image>
-            </ImageView>
-         </graphic></Button>
+      <DatePicker fx:id="dpSelecao" editable="false" layoutX="1179.0" layoutY="66.0" onAction="#carregaTransacao" prefHeight="34.0" prefWidth="169.0" />
       <TabPane layoutX="-1.0" layoutY="102.0" prefHeight="163.0" prefWidth="253.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
           <Tab>
@@ -312,14 +289,14 @@
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="115.0" prefWidth="255.0">
                      <children>
-                        <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="12.0" layoutY="16.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="12.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../../model/images/icons8_box_60px_1.png" />
                            </image>
                         </ImageView>
-                        <Line endX="87.0" endY="-46.0" layoutX="161.0" layoutY="136.0" startX="-155.0" startY="-46.0" stroke="#827f7f" />
-                        <JFXComboBox fx:id="cbPacoteAssociado" focusColor="WHITE" layoutX="49.0" layoutY="16.0" prefHeight="27.0" prefWidth="197.0" promptText="Funcionário" unFocusColor="BLACK" />
-                        <JFXButton fx:id="btBuscar" layoutX="164.0" layoutY="52.0" onAction="#buscaPacoteAssociado" text="Buscar" textFill="WHITE">
+                        <Line endX="91.0" endY="-46.0" layoutX="162.0" layoutY="131.0" startX="-155.0" startY="-46.0" stroke="#827f7f" />
+                        <JFXComboBox fx:id="cbPacoteAssociado" focusColor="WHITE" layoutX="49.0" layoutY="11.0" prefHeight="27.0" prefWidth="197.0" promptText="Funcionário" unFocusColor="BLACK" />
+                        <JFXButton fx:id="btBuscar" layoutX="164.0" layoutY="47.0" onAction="#buscaPacoteAssociado" text="Buscar" textFill="WHITE">
                            <font>
                               <Font name="System Bold" size="12.0" />
                            </font>
@@ -331,7 +308,7 @@
                               </ImageView>
                            </graphic>
                         </JFXButton>
-                        <JFXButton fx:id="btLimpar" layoutX="69.0" layoutY="51.0" onAction="#limpaPacotes" text="Limpar" textFill="WHITE">
+                        <JFXButton fx:id="btLimpar" layoutX="69.0" layoutY="46.0" onAction="#limpaPacotes" text="Limpar" textFill="WHITE">
                            <graphic>
                               <ImageView fitHeight="24.0" fitWidth="22.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
@@ -356,32 +333,74 @@
           </Tab>
         </tabs>
       </TabPane>
-      <Button fx:id="btAtualizar" layoutX="1258.0" layoutY="86.0" mnemonicParsing="false" onAction="#carregaTransacao" prefHeight="29.0" prefWidth="108.0" text="Atualizar">
-         <graphic>
-            <ImageView fitHeight="19.0" fitWidth="61.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../model/images/icons8_restart_96px_1.png" />
-               </image>
-            </ImageView>
-         </graphic>
-      </Button>
-      <JFXTextField fx:id="tfValor" focusColor="WHITE" layoutX="50.0" layoutY="305.0" prefHeight="27.0" prefWidth="104.0" promptText="Valor da Transação">
+      <JFXTextField fx:id="tfValor" focusColor="WHITE" layoutX="49.0" layoutY="305.0" prefHeight="27.0" prefWidth="117.0" promptText="Valor da Transação">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </JFXTextField>
-      <JFXComboBox fx:id="cbFormaPagamento" focusColor="WHITE" layoutX="49.0" layoutY="344.0" prefHeight="27.0" prefWidth="185.0" promptText="Forma de Pagamento" unFocusColor="BLACK" />
-      <JFXTextField fx:id="tfObs" focusColor="WHITE" layoutX="49.0" layoutY="382.0" prefHeight="27.0" prefWidth="185.0" promptText="Observação">
+      <JFXComboBox fx:id="cbFormaPagamento" focusColor="WHITE" layoutX="48.0" layoutY="344.0" prefHeight="27.0" prefWidth="185.0" promptText="Forma de Pagamento" unFocusColor="BLACK" />
+      <JFXTextField fx:id="tfObs" focusColor="WHITE" layoutX="48.0" layoutY="382.0" prefHeight="27.0" prefWidth="185.0" promptText="Observação">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </JFXTextField>
-      <JFXTreeView fx:id="trvServicos" layoutX="10.0" layoutY="451.0" prefHeight="189.0" prefWidth="234.0" />
-      <Label layoutX="43.0" layoutY="422.0" text="Serviços" textFill="WHITE">
+      <JFXTreeView fx:id="trvServicos" layoutX="10.0" layoutY="451.0" onMouseClicked="#selecionaServico" prefHeight="189.0" prefWidth="234.0" />
+      <DatePicker fx:id="dpData" disable="true" layoutX="48.0" layoutY="268.0" prefHeight="27.0" prefWidth="185.0" />
+      <Label layoutX="43.0" layoutY="425.0" text="Serviços" textFill="WHITE">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Label>
-      <Line endX="143.0" endY="-50.5" layoutX="108.0" layoutY="466.0" startX="-103.99996948242188" startY="-50.5" stroke="#827f7f" />
+      <Line endX="143.0" endY="-50.5" layoutX="108.0" layoutY="469.0" startX="-103.99996948242188" startY="-50.5" stroke="#827f7f" />
+      <JFXButton fx:id="btEnviarTransacao" layoutX="14.0" layoutY="648.0" onAction="#onBtEnviarTransacaoAction" prefHeight="32.0" prefWidth="104.0" text="Lançar" textFill="WHITE">
+         <graphic>
+            <ImageView fitHeight="24.0" fitWidth="22.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../model/images/add_30px.png" />
+               </image>
+            </ImageView>
+         </graphic>
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </JFXButton>
+      <JFXButton fx:id="btExcluir" layoutX="137.0" layoutY="648.0" onAction="#excluirTransacao" prefHeight="32.0" prefWidth="104.0" text="Excluir" textFill="WHITE">
+         <graphic>
+            <ImageView fitHeight="24.0" fitWidth="22.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../model/images/icons8_trash_60px_1.png" />
+               </image>
+            </ImageView>
+         </graphic>
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </JFXButton>
+      <Pane layoutX="139.0" layoutY="96.0" prefHeight="78.0" prefWidth="117.0" style="-fx-background-color: #2c2e33;" />
+      <Pane layoutX="-1.0" layoutY="93.0" prefHeight="13.0" prefWidth="140.0" style="-fx-background-color: #2c2e33;" />
+      <Pane layoutX="-1.0" layoutY="105.0" prefHeight="70.0" prefWidth="4.0" style="-fx-background-color: #2c2e33;" />
+      <JFXButton fx:id="btAtualizar" layoutX="1033.0" layoutY="66.0" onAction="#carregaTransacao" prefHeight="34.0" prefWidth="140.0" text="Atualizar" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+         <graphic>
+            <ImageView fitHeight="24.0" fitWidth="22.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../model/images/icons8_reset_64px.png" />
+               </image>
+            </ImageView>
+         </graphic>
+      </JFXButton>
+      <Button fx:id="btAbrirFecharCaixa" layoutX="18.0" layoutY="10.0" mnemonicParsing="false" onAction="#onBtAbrirFecharCaixaAction" prefHeight="78.0" prefWidth="208.0">
+         <font>
+            <Font name="System Bold" size="15.0" />
+         </font>
+         <graphic>
+            <ImageView fx:id="ivCaixa" fitHeight="124.0" fitWidth="65.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../../../../../AppData/Local/Temp/icons8_close_sign_60px_2.png" />
+               </image>
+            </ImageView>
+         </graphic></Button>
    </children>
 </AnchorPane>
