--- a/src/gui/views/ViewCaixa.fxml
+++ b/src/gui/views/ViewCaixa.fxml
@@ -27,7 +27,7 @@
    <children>
       <Pane fx:id="paneCentral" layoutX="1023.0" layoutY="10.0" opacity="0.53" prefHeight="106.0" prefWidth="336.0" />
       <Pane fx:id="paneCentral" layoutX="1023.0" layoutY="10.0" opacity="0.53" prefHeight="34.0" prefWidth="336.0" />
-      <Pane fx:id="paneCentral" layoutX="261.0" layoutY="13.0" opacity="0.53" prefHeight="106.0" prefWidth="390.0" />
+      <Pane fx:id="paneCentral" layoutX="261.0" layoutY="13.0" opacity="0.53" prefHeight="106.0" prefWidth="438.0" />
       <Pane fx:id="paneCentral" layoutX="262.0" layoutY="129.0" opacity="0.53" prefHeight="524.0" prefWidth="1097.0" />
       <TableView fx:id="tvTransacao" layoutX="274.0" layoutY="139.0" prefHeight="502.0" prefWidth="1075.0">
         <columns>
@@ -55,7 +55,7 @@
                      </image>
                   </ImageView>
                </graphic></TableColumn>
-            <TableColumn fx:id="colunaMeioPagamento" prefWidth="152.0" text="Meio de pagamento">
+            <TableColumn fx:id="colunaMeioPagamento" prefWidth="190.0" text="Meio de pagamento">
                <graphic>
                   <ImageView fitHeight="26.0" fitWidth="47.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -63,7 +63,7 @@
                      </image>
                   </ImageView>
                </graphic></TableColumn>
-            <TableColumn fx:id="colunaValor" prefWidth="92.0" text="Valor">
+            <TableColumn fx:id="colunaValor" prefWidth="82.0" text="Valor">
                <graphic>
                   <ImageView fitHeight="26.0" fitWidth="47.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -71,7 +71,7 @@
                      </image>
                   </ImageView>
                </graphic></TableColumn>
-            <TableColumn fx:id="colunaServico" prefWidth="145.0" text="Serviço">
+            <TableColumn fx:id="colunaServico" prefWidth="117.0" text="Serviço">
                <graphic>
                   <ImageView fitHeight="26.0" fitWidth="47.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -80,7 +80,7 @@
                   </ImageView>
                </graphic>
             </TableColumn>
-            <TableColumn fx:id="colunaObs" prefWidth="173.0" text="Observação">
+            <TableColumn fx:id="colunaObs" prefWidth="154.0" text="Observação">
                <graphic>
                   <ImageView fitHeight="26.0" fitWidth="47.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -89,7 +89,7 @@
                   </ImageView>
                </graphic>
             </TableColumn>
-          <TableColumn fx:id="colunaData" editable="false" minWidth="0.0" prefWidth="65.0" sortable="false" text="Data">
+          <TableColumn fx:id="colunaData" editable="false" minWidth="0.0" prefWidth="84.0" sortable="false" text="Data">
                <graphic>
                   <ImageView fitHeight="26.0" fitWidth="47.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -111,8 +111,8 @@
       <Label layoutX="43.0" layoutY="371.0" text="Forma de pagamento:" />
       <GridPane layoutX="272.0" layoutY="30.0" prefHeight="63.0" prefWidth="438.0" vgap="10.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="241.0" minWidth="10.0" prefWidth="202.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="152.0" minWidth="0.0" prefWidth="34.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="250.0" minWidth="10.0" prefWidth="242.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="152.0" minWidth="0.0" prefWidth="27.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="169.0" minWidth="10.0" prefWidth="164.0" />
         </columnConstraints>
         <rowConstraints>
@@ -200,7 +200,7 @@
             <JFXSpinner fx:id="piStatus" GridPane.columnIndex="1" />
          </children>
       </GridPane>
-      <Pane fx:id="paneCentral" layoutX="3.0" layoutY="164.0" opacity="0.53" prefHeight="524.0" prefWidth="249.0" />
+      <Pane fx:id="paneCentral" layoutX="4.0" layoutY="165.0" opacity="0.53" prefHeight="524.0" prefWidth="249.0" />
       <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="13.0" layoutY="268.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../model/images/icons8_calendar_1_60px_1.png" />
@@ -218,8 +218,8 @@
       </ImageView>
       <GridPane layoutX="1036.0" layoutY="11.0" prefHeight="30.0" prefWidth="336.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="194.0" minWidth="10.0" prefWidth="166.0" />
-          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="176.0" minWidth="10.0" prefWidth="176.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="10.0" prefWidth="190.0" />
+          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="176.0" minWidth="10.0" prefWidth="146.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -230,7 +230,7 @@
                   <Font name="System Bold" size="20.0" />
                </font>
             </Label>
-            <Label prefHeight="30.0" prefWidth="166.0" text="Status do caixa:" textFill="WHITE">
+            <Label prefHeight="30.0" prefWidth="184.0" text="Status do caixa:" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="20.0" />
                </font>
@@ -247,7 +247,7 @@
             <Image url="@../../model/images/icons8_address_book_30px_1.png" />
          </image>
       </ImageView>
-      <CheckBox fx:id="cbBloqueiaPreco" layoutX="175.0" layoutY="313.0" mnemonicParsing="false" onAction="#bloqDesbloqValor" selected="true" text="Liberar/Bloq" textFill="WHITE" wrapText="true">
+      <CheckBox fx:id="cbBloqueiaPreco" layoutX="171.0" layoutY="313.0" mnemonicParsing="false" onAction="#bloqDesbloqValor" selected="true" text="Liberar/Bloq" textFill="WHITE" wrapText="true">
          <font>
             <Font name="System Bold" size="9.0" />
          </font></CheckBox>
@@ -296,7 +296,7 @@
                         </ImageView>
                         <Line endX="91.0" endY="-46.0" layoutX="162.0" layoutY="131.0" startX="-155.0" startY="-46.0" stroke="#827f7f" />
                         <JFXComboBox fx:id="cbPacoteAssociado" focusColor="WHITE" layoutX="49.0" layoutY="11.0" prefHeight="27.0" prefWidth="197.0" promptText="Funcionário" unFocusColor="BLACK" />
-                        <JFXButton fx:id="btBuscar" layoutX="164.0" layoutY="47.0" onAction="#buscaPacoteAssociado" text="Buscar" textFill="WHITE">
+                        <JFXButton fx:id="btBuscar" layoutX="157.0" layoutY="47.0" onAction="#buscaPacoteAssociado" text="Buscar" textFill="WHITE">
                            <font>
                               <Font name="System Bold" size="12.0" />
                            </font>
@@ -308,7 +308,7 @@
                               </ImageView>
                            </graphic>
                         </JFXButton>
-                        <JFXButton fx:id="btLimpar" layoutX="69.0" layoutY="46.0" onAction="#limpaPacotes" text="Limpar" textFill="WHITE">
+                        <JFXButton fx:id="btLimpar" layoutX="62.0" layoutY="46.0" onAction="#limpaPacotes" text="Limpar" textFill="WHITE">
                            <graphic>
                               <ImageView fitHeight="24.0" fitWidth="22.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
@@ -344,7 +344,7 @@
             <Font name="System Bold" size="12.0" />
          </font>
       </JFXTextField>
-      <JFXTreeView fx:id="trvServicos" layoutX="10.0" layoutY="451.0" onMouseClicked="#selecionaServico" prefHeight="189.0" prefWidth="234.0" />
+      <JFXTreeView fx:id="trvServicos" layoutX="11.0" layoutY="451.0" onMouseClicked="#selecionaServico" prefHeight="189.0" prefWidth="234.0" />
       <DatePicker fx:id="dpData" disable="true" layoutX="48.0" layoutY="268.0" prefHeight="27.0" prefWidth="185.0" />
       <Label layoutX="43.0" layoutY="425.0" text="Serviços" textFill="WHITE">
          <font>
@@ -352,6 +352,7 @@
          </font>
       </Label>
       <Line endX="143.0" endY="-50.5" layoutX="108.0" layoutY="469.0" startX="-103.99996948242188" startY="-50.5" stroke="#827f7f" />
+      <Pane layoutX="139.0" layoutY="39.0" prefHeight="70.0" prefWidth="114.0" style="-fx-background-color: #2c2e33;" />
       <JFXButton fx:id="btEnviarTransacao" layoutX="14.0" layoutY="648.0" onAction="#onBtEnviarTransacaoAction" prefHeight="32.0" prefWidth="104.0" text="Lançar" textFill="WHITE">
          <graphic>
             <ImageView fitHeight="24.0" fitWidth="22.0" pickOnBounds="true" preserveRatio="true">
@@ -376,9 +377,9 @@
             <Font name="System Bold" size="12.0" />
          </font>
       </JFXButton>
-      <Pane layoutX="139.0" layoutY="96.0" prefHeight="78.0" prefWidth="117.0" style="-fx-background-color: #2c2e33;" />
-      <Pane layoutX="-1.0" layoutY="93.0" prefHeight="13.0" prefWidth="140.0" style="-fx-background-color: #2c2e33;" />
-      <Pane layoutX="-1.0" layoutY="105.0" prefHeight="70.0" prefWidth="4.0" style="-fx-background-color: #2c2e33;" />
+      <Pane layoutX="140.0" layoutY="109.0" prefHeight="68.0" prefWidth="117.0" style="-fx-background-color: #2c2e33;" />
+      <Pane layoutX="-1.0" layoutY="95.0" prefHeight="13.0" prefWidth="140.0" style="-fx-background-color: #2c2e33;" />
+      <Pane layoutY="108.0" prefHeight="70.0" prefWidth="4.0" style="-fx-background-color: #2c2e33;" />
       <JFXButton fx:id="btAtualizar" layoutX="1033.0" layoutY="66.0" onAction="#carregaTransacao" prefHeight="34.0" prefWidth="140.0" text="Atualizar" textFill="WHITE">
          <font>
             <Font name="System Bold" size="14.0" />
@@ -391,14 +392,14 @@
             </ImageView>
          </graphic>
       </JFXButton>
-      <Button fx:id="btAbrirFecharCaixa" layoutX="18.0" layoutY="10.0" mnemonicParsing="false" onAction="#onBtAbrirFecharCaixaAction" prefHeight="78.0" prefWidth="208.0">
+      <Button fx:id="btAbrirFecharCaixa" layoutX="18.0" layoutY="11.0" mnemonicParsing="false" onAction="#onBtAbrirFecharCaixaAction" prefHeight="78.0" prefWidth="208.0">
          <font>
             <Font name="System Bold" size="15.0" />
          </font>
          <graphic>
             <ImageView fx:id="ivCaixa" fitHeight="124.0" fitWidth="65.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../../../../../../AppData/Local/Temp/icons8_close_sign_60px_2.png" />
+                  <Image url="@../../model/images/icons8_close_sign_60px_3.png" />
                </image>
             </ImageView>
          </graphic></Button>
