--- a/src/gui/views/ViewFuncionario.fxml
+++ b/src/gui/views/ViewFuncionario.fxml
@@ -16,13 +16,13 @@
 
 <AnchorPane maxHeight="600.0" maxWidth="924.0" minHeight="0.0" minWidth="0.0" prefHeight="600.0" prefWidth="659.0" stylesheets="@css/styleTabFuncionario.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.ViewFuncionarioController">
    <children>
-      <TabPane layoutX="-5.0" prefHeight="607.0" prefWidth="666.0" side="LEFT" tabClosingPolicy="UNAVAILABLE">
+      <TabPane layoutX="-6.0" prefHeight="607.0" prefWidth="667.0" side="LEFT" tabClosingPolicy="UNAVAILABLE">
         <tabs>
           <Tab>
             <content>
               <AnchorPane fx:id="tabReplaceAp" minHeight="0.0" minWidth="0.0" prefHeight="607.0" prefWidth="607.0">
                      <children>
-                        <Pane fx:id="paneCentral" layoutX="-32.0" layoutY="4.0" opacity="0.83" prefHeight="159.0" prefWidth="598.0" style="-fx-border-color: #cccccc;" />
+                        <Pane fx:id="paneCentral" layoutX="-32.0" layoutY="5.0" opacity="0.83" prefHeight="159.0" prefWidth="598.0" style="-fx-border-color: #cccccc;" />
                         <Pane fx:id="paneCentral" layoutX="-13.0" layoutY="183.0" opacity="0.83" prefHeight="408.0" prefWidth="596.0" style="-fx-border-color: #cccccc;" />
                         <TableView fx:id="tvFuncionario" layoutX="14.0" layoutY="199.0" prefHeight="378.0" prefWidth="557.0" style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);">
                           <columns>
@@ -60,7 +60,7 @@
                                  </graphic></TableColumn>
                           </columns>
                         </TableView>
-                        <JFXTextField fx:id="txtNomeFuncionario" focusColor="WHITE" layoutX="69.0" layoutY="33.0" promptText="Nome do Funcionário">
+                        <JFXTextField fx:id="txtNomeFuncionario" focusColor="WHITE" layoutX="55.0" layoutY="33.0" promptText="Nome do Funcionário">
                            <font>
                               <Font name="System Bold" size="16.0" />
                            </font></JFXTextField>
@@ -69,11 +69,11 @@
                               <Font name="System Bold" size="16.0" />
                            </font>
                         </JFXTextField>
-                        <JFXTextField fx:id="txtTelefoneFuncionario" focusColor="WHITE" layoutX="70.0" layoutY="93.0" promptText="Telefone do Funcionário">
+                        <JFXTextField fx:id="txtTelefoneFuncionario" focusColor="WHITE" layoutX="56.0" layoutY="93.0" promptText="Telefone do Funcionário">
                            <font>
                               <Font name="System Bold" size="16.0" />
                            </font></JFXTextField>
-                        <JFXButton fx:id="btExcluiFuncionario" layoutX="390.0" layoutY="93.0" onAction="#excluirFuncionario" prefHeight="39.0" prefWidth="153.0" text="Excluir" textFill="WHITE">
+                        <JFXButton fx:id="btExcluiFuncionario" layoutX="389.0" layoutY="93.0" onAction="#excluirFuncionario" prefHeight="39.0" prefWidth="153.0" text="Excluir" textFill="WHITE">
                            <font>
                               <Font name="System Bold" size="16.0" />
                            </font>
@@ -85,7 +85,7 @@
                               </ImageView>
                            </graphic>
                         </JFXButton>
-                        <JFXButton fx:id="btCriaFuncionario" layoutX="288.0" layoutY="93.0" onAction="#onBtCriaFuncionarioAction" prefHeight="39.0" prefWidth="137.0" text="Criar" textFill="WHITE">
+                        <JFXButton fx:id="btCriaFuncionario" layoutX="284.0" layoutY="93.0" onAction="#onBtCriaFuncionarioAction" prefHeight="39.0" prefWidth="137.0" text="Criar" textFill="WHITE">
                            <font>
                               <Font name="System Bold" size="16.0" />
                            </font>
@@ -97,7 +97,7 @@
                               </ImageView>
                            </graphic>
                         </JFXButton>
-                        <ImageView fitHeight="37.0" fitWidth="38.0" layoutX="30.0" layoutY="94.0" pickOnBounds="true" preserveRatio="true" style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);">
+                        <ImageView fitHeight="37.0" fitWidth="38.0" layoutX="16.0" layoutY="94.0" pickOnBounds="true" preserveRatio="true" style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);">
                            <image>
                               <Image url="@../../model/images/icons8_phone_64px.png" />
                            </image>
@@ -107,7 +107,7 @@
                               <Image url="@../../model/images/icons8_identification_documents_60px.png" />
                            </image>
                         </ImageView>
-                        <ImageView fitHeight="37.0" fitWidth="38.0" layoutX="30.0" layoutY="34.0" pickOnBounds="true" preserveRatio="true" style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);">
+                        <ImageView fitHeight="37.0" fitWidth="38.0" layoutX="16.0" layoutY="34.0" pickOnBounds="true" preserveRatio="true" style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);">
                            <image>
                               <Image url="@../../model/images/icons8_businesswoman_60px.png" />
                            </image>
@@ -159,17 +159,17 @@
                            </columns>
                         </TableView>
                         <Pane fx:id="paneCentral" layoutX="-36.0" layoutY="4.0" opacity="0.83" prefHeight="159.0" prefWidth="577.0" style="-fx-border-color: #cccccc;" />
-                        <JFXTextField fx:id="txtTelefoneFuncionarioAtualizado" focusColor="WHITE" layoutX="81.0" layoutY="92.0" promptText="Telefone do Funcionário">
+                        <JFXTextField fx:id="txtTelefoneFuncionarioAtualizado" focusColor="WHITE" layoutX="51.0" layoutY="92.0" prefHeight="34.0" prefWidth="228.0" promptText="Telefone do Funcionário">
                            <font>
                               <Font name="System Bold" size="16.0" />
                            </font>
                         </JFXTextField>
-                        <JFXTextField fx:id="txtCpfFuncionarioAtualizado" focusColor="WHITE" layoutX="329.0" layoutY="32.0" promptText="CPF funcionário">
+                        <JFXTextField fx:id="txtCpfFuncionarioAtualizado" focusColor="WHITE" layoutX="316.0" layoutY="32.0" promptText="CPF funcionário">
                            <font>
                               <Font name="System Bold" size="16.0" />
                            </font>
                         </JFXTextField>
-                        <JFXTextField fx:id="txtNomeFuncionarioAtualizado" focusColor="WHITE" layoutX="80.0" layoutY="32.0" promptText="Nome do Funcionário">
+                        <JFXTextField fx:id="txtNomeFuncionarioAtualizado" focusColor="WHITE" layoutX="50.0" layoutY="32.0" promptText="Nome do Funcionário">
                            <font>
                               <Font name="System Bold" size="16.0" />
                            </font>
@@ -186,17 +186,17 @@
                               </ImageView>
                            </graphic>
                         </JFXButton>
-                        <ImageView fitHeight="37.0" fitWidth="38.0" layoutX="40.0" layoutY="93.0" pickOnBounds="true" preserveRatio="true" style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);">
+                        <ImageView fitHeight="37.0" fitWidth="38.0" layoutX="10.0" layoutY="93.0" pickOnBounds="true" preserveRatio="true" style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);">
                            <image>
                               <Image url="@../../model/images/icons8_phone_64px.png" />
                            </image>
                         </ImageView>
-                        <ImageView fitHeight="37.0" fitWidth="38.0" layoutX="289.0" layoutY="33.0" pickOnBounds="true" preserveRatio="true" style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);">
+                        <ImageView fitHeight="37.0" fitWidth="38.0" layoutX="276.0" layoutY="33.0" pickOnBounds="true" preserveRatio="true" style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);">
                            <image>
                               <Image url="@../../model/images/icons8_identification_documents_60px.png" />
                            </image>
                         </ImageView>
-                        <ImageView fitHeight="37.0" fitWidth="38.0" layoutX="40.0" layoutY="33.0" pickOnBounds="true" preserveRatio="true" style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);">
+                        <ImageView fitHeight="37.0" fitWidth="38.0" layoutX="10.0" layoutY="33.0" pickOnBounds="true" preserveRatio="true" style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);">
                            <image>
                               <Image url="@../../model/images/icons8_businesswoman_60px.png" />
                            </image>
@@ -217,8 +217,10 @@
             <Insets />
          </opaqueInsets>
       </TabPane>
-      <JFXSpinner fx:id="piStatus" layoutX="8.0" layoutY="542.0" visible="false" />
-      <Pane layoutX="-9.0" layoutY="127.0" prefHeight="481.0" prefWidth="77.0" style="-fx-background-color: #2c2e33; -fx-border-color: #cccccc;" />
-      <Pane layoutY="-2.0" prefHeight="6.0" prefWidth="69.0" style="-fx-background-color: #2c2e33;" />
+      <Pane layoutX="-7.0" layoutY="128.0" prefHeight="481.0" prefWidth="77.0" style="-fx-background-color: #2c2e33; -fx-border-color: #cccccc;">
+         <children>
+            <JFXSpinner fx:id="piStatus" layoutX="14.0" layoutY="419.0" visible="false" />
+         </children></Pane>
+      <Pane layoutX="-7.0" layoutY="-2.0" prefHeight="7.0" prefWidth="77.0" style="-fx-background-color: #2c2e33;" />
    </children>
 </AnchorPane>
